[gd_scene load_steps=14 format=2]

[ext_resource path="res://character/base/base.png" type="Texture" id=1]
[ext_resource path="res://main.gd" type="Script" id=2]
[ext_resource path="res://palette_swap.tres" type="Shader" id=3]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 3 )
shader_param/original_0_0 = Color( 0.913725, 0.709804, 0.639216, 1 )
shader_param/original_0_1 = Color( 0.729412, 0.458824, 0.415686, 1 )
shader_param/original_0_2 = Color( 0.556863, 0.321569, 0.321569, 1 )
shader_param/original_0_3 = Color( 0.356863, 0.192157, 0.219608, 1 )
shader_param/original_0_4 = Color( 0.258824, 0.141176, 0.2, 1 )
shader_param/original_1_0 = null
shader_param/original_1_1 = null
shader_param/original_1_2 = null
shader_param/original_1_3 = null
shader_param/original_1_4 = null
shader_param/original_2_0 = null
shader_param/original_2_1 = null
shader_param/original_2_2 = null
shader_param/original_2_3 = null
shader_param/original_2_4 = null
shader_param/replace_0_0 = Color( 1, 1, 1, 1 )
shader_param/replace_0_1 = Color( 0.8, 0.8, 0.8, 1 )
shader_param/replace_0_2 = Color( 0.6, 0.6, 0.6, 1 )
shader_param/replace_0_3 = Color( 0.4, 0.4, 0.4, 1 )
shader_param/replace_0_4 = Color( 0.2, 0.2, 0.2, 1 )
shader_param/replace_1_0 = null
shader_param/replace_1_1 = null
shader_param/replace_1_2 = null
shader_param/replace_1_3 = null
shader_param/replace_1_4 = null
shader_param/replace_2_0 = null
shader_param/replace_2_1 = null
shader_param/replace_2_2 = null
shader_param/replace_2_3 = null
shader_param/replace_2_4 = null

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 3 )
shader_param/original_0_0 = Color( 0.34902, 0.756863, 0.207843, 1 )
shader_param/original_0_1 = Color( 0.0784314, 0.627451, 0.180392, 1 )
shader_param/original_0_2 = Color( 0.101961, 0.478431, 0.243137, 1 )
shader_param/original_0_3 = Color( 0.141176, 0.321569, 0.231373, 1 )
shader_param/original_0_4 = Color( 0.0705882, 0.12549, 0.12549, 1 )
shader_param/original_1_0 = Color( 0.12549, 0.839216, 0.780392, 1 )
shader_param/original_1_1 = Color( 0.141176, 0.623529, 0.870588, 1 )
shader_param/original_1_2 = Color( 0.156863, 0.360784, 0.768627, 1 )
shader_param/original_1_3 = Color( 0.0784314, 0.203922, 0.392157, 1 )
shader_param/original_1_4 = Color( 0.0705882, 0.12549, 0.12549, 1 )
shader_param/original_2_0 = Color( 0.909804, 0.415686, 0.45098, 1 )
shader_param/original_2_1 = Color( 0.737255, 0.290196, 0.607843, 1 )
shader_param/original_2_2 = Color( 0.47451, 0.227451, 0.501961, 1 )
shader_param/original_2_3 = Color( 0.25098, 0.2, 0.32549, 1 )
shader_param/original_2_4 = Color( 0.141176, 0.133333, 0.203922, 1 )
shader_param/replace_0_0 = null
shader_param/replace_0_1 = null
shader_param/replace_0_2 = null
shader_param/replace_0_3 = null
shader_param/replace_0_4 = null
shader_param/replace_1_0 = null
shader_param/replace_1_1 = null
shader_param/replace_1_2 = null
shader_param/replace_1_3 = null
shader_param/replace_1_4 = null
shader_param/replace_2_0 = null
shader_param/replace_2_1 = null
shader_param/replace_2_2 = null
shader_param/replace_2_3 = null
shader_param/replace_2_4 = null

[sub_resource type="ShaderMaterial" id=3]
shader = ExtResource( 3 )
shader_param/original_0_0 = Color( 0.909804, 0.415686, 0.45098, 1 )
shader_param/original_0_1 = Color( 0.737255, 0.290196, 0.607843, 1 )
shader_param/original_0_2 = Color( 0.47451, 0.227451, 0.501961, 1 )
shader_param/original_0_3 = Color( 0.25098, 0.2, 0.32549, 1 )
shader_param/original_0_4 = Color( 0.141176, 0.133333, 0.203922, 1 )
shader_param/original_1_0 = Color( 0.12549, 0.839216, 0.780392, 1 )
shader_param/original_1_1 = Color( 0.141176, 0.623529, 0.870588, 1 )
shader_param/original_1_2 = Color( 0.156863, 0.360784, 0.768627, 1 )
shader_param/original_1_3 = Color( 0.0784314, 0.203922, 0.392157, 1 )
shader_param/original_1_4 = Color( 0.0705882, 0.12549, 0.12549, 1 )
shader_param/original_2_0 = Color( 0.87451, 0.243137, 0.137255, 1 )
shader_param/original_2_1 = Color( 0.705882, 0.12549, 0.164706, 1 )
shader_param/original_2_2 = Color( 0.45098, 0.0901961, 0.176471, 1 )
shader_param/original_2_3 = Color( 0.231373, 0.0901961, 0.145098, 1 )
shader_param/original_2_4 = Color( 0.0784314, 0.0627451, 0.0745098, 1 )
shader_param/replace_0_0 = Color( 0, 0, 0, 1 )
shader_param/replace_0_1 = null
shader_param/replace_0_2 = null
shader_param/replace_0_3 = null
shader_param/replace_0_4 = null
shader_param/replace_1_0 = null
shader_param/replace_1_1 = null
shader_param/replace_1_2 = null
shader_param/replace_1_3 = null
shader_param/replace_1_4 = null
shader_param/replace_2_0 = null
shader_param/replace_2_1 = null
shader_param/replace_2_2 = null
shader_param/replace_2_3 = null
shader_param/replace_2_4 = null

[sub_resource type="ShaderMaterial" id=4]
shader = ExtResource( 3 )
shader_param/original_0_0 = Color( 0.909804, 0.415686, 0.45098, 1 )
shader_param/original_0_1 = Color( 0.737255, 0.290196, 0.607843, 1 )
shader_param/original_0_2 = Color( 0.47451, 0.227451, 0.501961, 1 )
shader_param/original_0_3 = Color( 0.25098, 0.2, 0.32549, 1 )
shader_param/original_0_4 = Color( 0.141176, 0.133333, 0.203922, 1 )
shader_param/original_1_0 = Color( 0.12549, 0.839216, 0.780392, 1 )
shader_param/original_1_1 = Color( 0.141176, 0.623529, 0.870588, 1 )
shader_param/original_1_2 = Color( 0.156863, 0.360784, 0.768627, 1 )
shader_param/original_1_3 = Color( 0.0784314, 0.203922, 0.392157, 1 )
shader_param/original_1_4 = Color( 0.0705882, 0.12549, 0.12549, 1 )
shader_param/original_2_0 = Color( 0.87451, 0.243137, 0.137255, 1 )
shader_param/original_2_1 = Color( 0.705882, 0.12549, 0.164706, 1 )
shader_param/original_2_2 = Color( 0.45098, 0.0901961, 0.176471, 1 )
shader_param/original_2_3 = Color( 0.231373, 0.0901961, 0.145098, 1 )
shader_param/original_2_4 = Color( 0.0784314, 0.0627451, 0.0745098, 1 )
shader_param/replace_0_0 = null
shader_param/replace_0_1 = null
shader_param/replace_0_2 = null
shader_param/replace_0_3 = null
shader_param/replace_0_4 = null
shader_param/replace_1_0 = null
shader_param/replace_1_1 = null
shader_param/replace_1_2 = null
shader_param/replace_1_3 = null
shader_param/replace_1_4 = null
shader_param/replace_2_0 = null
shader_param/replace_2_1 = null
shader_param/replace_2_2 = null
shader_param/replace_2_3 = null
shader_param/replace_2_4 = null

[sub_resource type="ShaderMaterial" id=5]
shader = ExtResource( 3 )
shader_param/original_0_0 = Color( 0.909804, 0.415686, 0.45098, 1 )
shader_param/original_0_1 = Color( 0.737255, 0.290196, 0.607843, 1 )
shader_param/original_0_2 = Color( 0.47451, 0.227451, 0.501961, 1 )
shader_param/original_0_3 = Color( 0.25098, 0.2, 0.32549, 1 )
shader_param/original_0_4 = Color( 0.141176, 0.133333, 0.203922, 1 )
shader_param/original_1_0 = Color( 0.12549, 0.839216, 0.780392, 1 )
shader_param/original_1_1 = Color( 0.141176, 0.623529, 0.870588, 1 )
shader_param/original_1_2 = Color( 0.156863, 0.360784, 0.768627, 1 )
shader_param/original_1_3 = Color( 0.0784314, 0.203922, 0.392157, 1 )
shader_param/original_1_4 = Color( 0.0705882, 0.12549, 0.12549, 1 )
shader_param/original_2_0 = Color( 0.87451, 0.243137, 0.137255, 1 )
shader_param/original_2_1 = Color( 0.705882, 0.12549, 0.164706, 1 )
shader_param/original_2_2 = Color( 0.45098, 0.0901961, 0.176471, 1 )
shader_param/original_2_3 = Color( 0.231373, 0.0901961, 0.145098, 1 )
shader_param/original_2_4 = Color( 0.0784314, 0.0627451, 0.0745098, 1 )
shader_param/replace_0_0 = null
shader_param/replace_0_1 = null
shader_param/replace_0_2 = null
shader_param/replace_0_3 = null
shader_param/replace_0_4 = null
shader_param/replace_1_0 = null
shader_param/replace_1_1 = null
shader_param/replace_1_2 = null
shader_param/replace_1_3 = null
shader_param/replace_1_4 = null
shader_param/replace_2_0 = null
shader_param/replace_2_1 = null
shader_param/replace_2_2 = null
shader_param/replace_2_3 = null
shader_param/replace_2_4 = null

[sub_resource type="ShaderMaterial" id=6]
shader = ExtResource( 3 )
shader_param/original_0_0 = Color( 0.258824, 0.141176, 0.2, 1 )
shader_param/original_0_1 = Color( 0.0235294, 0.0235294, 0.0313726, 1 )
shader_param/original_0_2 = Color( 0, 0, 0, 1 )
shader_param/original_0_3 = Color( 0, 0, 0, 1 )
shader_param/original_0_4 = Color( 0, 0, 0, 1 )
shader_param/original_1_0 = Color( 0.12549, 0.839216, 0.780392, 1 )
shader_param/original_1_1 = Color( 0.141176, 0.623529, 0.870588, 1 )
shader_param/original_1_2 = Color( 0, 0, 0, 1 )
shader_param/original_1_3 = Color( 0, 0, 0, 1 )
shader_param/original_1_4 = Color( 0, 0, 0, 1 )
shader_param/original_2_0 = Color( 1, 1, 1, 1 )
shader_param/original_2_1 = Color( 0.854902, 0.878431, 0.917647, 1 )
shader_param/original_2_2 = Color( 0, 0, 0, 1 )
shader_param/original_2_3 = Color( 0, 0, 0, 1 )
shader_param/original_2_4 = Color( 0, 0, 0, 1 )
shader_param/replace_0_0 = null
shader_param/replace_0_1 = null
shader_param/replace_0_2 = null
shader_param/replace_0_3 = null
shader_param/replace_0_4 = null
shader_param/replace_1_0 = null
shader_param/replace_1_1 = null
shader_param/replace_1_2 = null
shader_param/replace_1_3 = null
shader_param/replace_1_4 = null
shader_param/replace_2_0 = null
shader_param/replace_2_1 = null
shader_param/replace_2_2 = null
shader_param/replace_2_3 = null
shader_param/replace_2_4 = null

[sub_resource type="ShaderMaterial" id=7]
shader = ExtResource( 3 )
shader_param/original_0_0 = Color( 0.258824, 0.141176, 0.2, 1 )
shader_param/original_0_1 = Color( 0.0235294, 0.0235294, 0.0313726, 1 )
shader_param/original_0_2 = Color( 0, 0, 0, 1 )
shader_param/original_0_3 = Color( 0, 0, 0, 1 )
shader_param/original_0_4 = Color( 0, 0, 0, 1 )
shader_param/original_1_0 = Color( 1, 1, 1, 1 )
shader_param/original_1_1 = Color( 0, 0, 0, 1 )
shader_param/original_1_2 = Color( 0, 0, 0, 1 )
shader_param/original_1_3 = Color( 0, 0, 0, 1 )
shader_param/original_1_4 = Color( 0, 0, 0, 1 )
shader_param/original_2_0 = Color( 1, 1, 1, 1 )
shader_param/original_2_1 = Color( 0, 0, 0, 1 )
shader_param/original_2_2 = Color( 0, 0, 0, 1 )
shader_param/original_2_3 = Color( 0, 0, 0, 1 )
shader_param/original_2_4 = Color( 0, 0, 0, 1 )
shader_param/replace_0_0 = null
shader_param/replace_0_1 = null
shader_param/replace_0_2 = null
shader_param/replace_0_3 = null
shader_param/replace_0_4 = null
shader_param/replace_1_0 = null
shader_param/replace_1_1 = null
shader_param/replace_1_2 = null
shader_param/replace_1_3 = null
shader_param/replace_1_4 = null
shader_param/replace_2_0 = null
shader_param/replace_2_1 = null
shader_param/replace_2_2 = null
shader_param/replace_2_3 = null
shader_param/replace_2_4 = null

[sub_resource type="ShaderMaterial" id=8]
shader = ExtResource( 3 )
shader_param/original_0_0 = Color( 0.913725, 0.709804, 0.639216, 1 )
shader_param/original_0_1 = Color( 0.729412, 0.458824, 0.415686, 1 )
shader_param/original_0_2 = Color( 0.556863, 0.321569, 0.321569, 1 )
shader_param/original_0_3 = Color( 0.356863, 0.192157, 0.219608, 1 )
shader_param/original_0_4 = Color( 0.258824, 0.141176, 0.2, 1 )
shader_param/original_1_0 = Color( 1, 1, 1, 1 )
shader_param/original_1_1 = Color( 1, 1, 1, 1 )
shader_param/original_1_2 = Color( 1, 1, 1, 1 )
shader_param/original_1_3 = Color( 1, 1, 1, 1 )
shader_param/original_1_4 = Color( 1, 1, 1, 1 )
shader_param/original_2_0 = Color( 1, 1, 1, 1 )
shader_param/original_2_1 = Color( 1, 1, 1, 1 )
shader_param/original_2_2 = Color( 1, 1, 1, 1 )
shader_param/original_2_3 = Color( 1, 1, 1, 1 )
shader_param/original_2_4 = Color( 1, 1, 1, 1 )
shader_param/replace_0_0 = Color( 0, 0, 0, 1 )
shader_param/replace_0_1 = null
shader_param/replace_0_2 = null
shader_param/replace_0_3 = null
shader_param/replace_0_4 = null
shader_param/replace_1_0 = null
shader_param/replace_1_1 = null
shader_param/replace_1_2 = null
shader_param/replace_1_3 = null
shader_param/replace_1_4 = null
shader_param/replace_2_0 = null
shader_param/replace_2_1 = null
shader_param/replace_2_2 = null
shader_param/replace_2_3 = null
shader_param/replace_2_4 = null

[sub_resource type="ShaderMaterial" id=9]
shader = ExtResource( 3 )
shader_param/original_0_0 = Color( 0.34902, 0.756863, 0.207843, 1 )
shader_param/original_0_1 = Color( 0.0784314, 0.627451, 0.180392, 1 )
shader_param/original_0_2 = Color( 0.101961, 0.478431, 0.243137, 1 )
shader_param/original_0_3 = Color( 0.141176, 0.321569, 0.231373, 1 )
shader_param/original_0_4 = Color( 0.0705882, 0.12549, 0.12549, 1 )
shader_param/original_1_0 = Color( 0.12549, 0.839216, 0.780392, 1 )
shader_param/original_1_1 = Color( 0.141176, 0.623529, 0.870588, 1 )
shader_param/original_1_2 = Color( 0.156863, 0.360784, 0.768627, 1 )
shader_param/original_1_3 = Color( 0.0784314, 0.203922, 0.392157, 1 )
shader_param/original_1_4 = Color( 0.0705882, 0.12549, 0.12549, 1 )
shader_param/original_2_0 = Color( 0.909804, 0.415686, 0.45098, 1 )
shader_param/original_2_1 = Color( 0.737255, 0.290196, 0.607843, 1 )
shader_param/original_2_2 = Color( 0.47451, 0.227451, 0.501961, 1 )
shader_param/original_2_3 = Color( 0.25098, 0.2, 0.32549, 1 )
shader_param/original_2_4 = Color( 0.141176, 0.133333, 0.203922, 1 )
shader_param/replace_0_0 = null
shader_param/replace_0_1 = null
shader_param/replace_0_2 = null
shader_param/replace_0_3 = null
shader_param/replace_0_4 = null
shader_param/replace_1_0 = null
shader_param/replace_1_1 = null
shader_param/replace_1_2 = null
shader_param/replace_1_3 = null
shader_param/replace_1_4 = null
shader_param/replace_2_0 = null
shader_param/replace_2_1 = null
shader_param/replace_2_2 = null
shader_param/replace_2_3 = null
shader_param/replace_2_4 = null

[sub_resource type="ShaderMaterial" id=10]
shader = ExtResource( 3 )
shader_param/original_0_0 = Color( 0.909804, 0.415686, 0.45098, 1 )
shader_param/original_0_1 = Color( 0.737255, 0.290196, 0.607843, 1 )
shader_param/original_0_2 = Color( 0.47451, 0.227451, 0.501961, 1 )
shader_param/original_0_3 = Color( 0.25098, 0.2, 0.32549, 1 )
shader_param/original_0_4 = Color( 0.141176, 0.133333, 0.203922, 1 )
shader_param/original_1_0 = Color( 0.12549, 0.839216, 0.780392, 1 )
shader_param/original_1_1 = Color( 0.141176, 0.623529, 0.870588, 1 )
shader_param/original_1_2 = Color( 0.156863, 0.360784, 0.768627, 1 )
shader_param/original_1_3 = Color( 0.0784314, 0.203922, 0.392157, 1 )
shader_param/original_1_4 = Color( 0.0705882, 0.12549, 0.12549, 1 )
shader_param/original_2_0 = Color( 0.87451, 0.243137, 0.137255, 1 )
shader_param/original_2_1 = Color( 0.705882, 0.12549, 0.164706, 1 )
shader_param/original_2_2 = Color( 0.45098, 0.0901961, 0.176471, 1 )
shader_param/original_2_3 = Color( 0.231373, 0.0901961, 0.145098, 1 )
shader_param/original_2_4 = Color( 0.0784314, 0.0627451, 0.0745098, 1 )
shader_param/replace_0_0 = null
shader_param/replace_0_1 = null
shader_param/replace_0_2 = null
shader_param/replace_0_3 = null
shader_param/replace_0_4 = null
shader_param/replace_1_0 = null
shader_param/replace_1_1 = null
shader_param/replace_1_2 = null
shader_param/replace_1_3 = null
shader_param/replace_1_4 = null
shader_param/replace_2_0 = null
shader_param/replace_2_1 = null
shader_param/replace_2_2 = null
shader_param/replace_2_3 = null
shader_param/replace_2_4 = null

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="HBox" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Base" type="TextureRect" parent="HBox"]
material = SubResource( 1 )
margin_right = 510.0
margin_bottom = 600.0
size_flags_horizontal = 3
texture = ExtResource( 1 )
expand = true
stretch_mode = 6

[node name="hair_back" type="TextureRect" parent="HBox/Base"]
show_behind_parent = true
material = SubResource( 2 )
anchor_right = 1.0
anchor_bottom = 1.0
expand = true
stretch_mode = 6
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="shoes" type="TextureRect" parent="HBox/Base"]
material = SubResource( 3 )
anchor_right = 1.0
anchor_bottom = 1.0
expand = true
stretch_mode = 6
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="bottoms" type="TextureRect" parent="HBox/Base"]
material = SubResource( 4 )
anchor_right = 1.0
anchor_bottom = 1.0
expand = true
stretch_mode = 6
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="tops" type="TextureRect" parent="HBox/Base"]
material = SubResource( 5 )
anchor_right = 1.0
anchor_bottom = 1.0
expand = true
stretch_mode = 6
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="eyes" type="TextureRect" parent="HBox/Base"]
material = SubResource( 6 )
anchor_right = 1.0
anchor_bottom = 1.0
expand = true
stretch_mode = 6
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="eyebrows" type="TextureRect" parent="HBox/Base"]
material = SubResource( 7 )
anchor_right = 1.0
anchor_bottom = 1.0
expand = true
stretch_mode = 6
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="ears" type="TextureRect" parent="HBox/Base"]
material = SubResource( 8 )
anchor_right = 1.0
anchor_bottom = 1.0
expand = true
stretch_mode = 6
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="hair_front" type="TextureRect" parent="HBox/Base"]
material = SubResource( 9 )
anchor_right = 1.0
anchor_bottom = 1.0
expand = true
stretch_mode = 6
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="head" type="TextureRect" parent="HBox/Base"]
material = SubResource( 10 )
anchor_right = 1.0
anchor_bottom = 1.0
expand = true
stretch_mode = 6
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Right" type="VBoxContainer" parent="HBox"]
margin_left = 514.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3

[node name="Tab" type="TabContainer" parent="HBox/Right"]
margin_right = 510.0
margin_bottom = 490.0
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HBox/Right"]
margin_top = 494.0
margin_right = 510.0
margin_bottom = 576.0

[node name="SkinColor" type="ColorPickerButton" parent="HBox/Right/VBoxContainer"]
margin_left = 223.0
margin_right = 287.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
size_flags_horizontal = 4
color = Color( 1, 1, 1, 1 )

[node name="Label" type="Label" parent="HBox/Right/VBoxContainer"]
margin_top = 68.0
margin_right = 510.0
margin_bottom = 82.0
text = "Skin Color"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="HBox/Right"]
margin_top = 580.0
margin_right = 510.0
margin_bottom = 600.0
alignment = 1

[node name="ClearCurrent" type="Button" parent="HBox/Right/HBoxContainer"]
margin_left = 103.0
margin_right = 198.0
margin_bottom = 20.0
text = "Clear Current"

[node name="ClearAll" type="Button" parent="HBox/Right/HBoxContainer"]
margin_left = 202.0
margin_right = 267.0
margin_bottom = 20.0
text = "Clear All"

[node name="Download" type="Button" parent="HBox/Right/HBoxContainer"]
margin_left = 271.0
margin_right = 346.0
margin_bottom = 20.0
text = "Download"

[node name="Credits" type="Button" parent="HBox/Right/HBoxContainer"]
margin_left = 350.0
margin_right = 407.0
margin_bottom = 20.0
text = "Credits"

[node name="CreditsPop" type="PopupPanel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -256.0
margin_top = -150.0
margin_right = 256.0
margin_bottom = 150.0
rect_min_size = Vector2( 512, 300 )
__meta__ = {
"_edit_lock_": true
}

[node name="RichTextLabel" type="RichTextLabel" parent="CreditsPop"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0
bbcode_enabled = true
bbcode_text = "[center]Programming and art by Exuin
[url=https://github.com/Pukkah/HTML5-File-Exchange-for-Godot]Download file function by laame[/url]
[url=https://godotengine.org/license]Made in Godot 3.4[/url][/center]"
text = "Programming and art by Exuin
Download file function by laame
Made in Godot 3.4"
__meta__ = {
"_edit_lock_": true
}

[connection signal="color_changed" from="HBox/Right/VBoxContainer/SkinColor" to="." method="_on_skin_color_changed"]
[connection signal="pressed" from="HBox/Right/HBoxContainer/ClearCurrent" to="." method="_on_clear_current_pressed"]
[connection signal="pressed" from="HBox/Right/HBoxContainer/ClearAll" to="." method="_on_clear_all_pressed"]
[connection signal="pressed" from="HBox/Right/HBoxContainer/Download" to="." method="_on_download_pressed"]
[connection signal="pressed" from="HBox/Right/HBoxContainer/Credits" to="." method="_on_credits_pressed"]
[connection signal="meta_clicked" from="CreditsPop/RichTextLabel" to="." method="_on_meta_clicked"]
